--- a/README.Rmd
+++ b/README.Rmd
@@ -23,7 +23,7 @@ library(tidyterra)
 library(scales) # Additional library for labels
 ```
 
-# Welcome!
+# Welcome! <a href="https://github.com/mikejohnson51/climateR"><img src="man/figures/logo.png" align="right" height="139"/></a>
 
 <!-- badges: start -->
 [![DOI](https://zenodo.org/badge/158620263.svg)](https://zenodo.org/badge/latestdoi/158620263)
@@ -285,4 +285,3 @@ animation(max, feild_pattern = "precip_", outfile = "man/figures/vect_gif.gif")
 ```{r, echo = FALSE}
 knitr::include_graphics("man/figures/vect_gif.gif")
 ```
-
